--- a/new.css
+++ b/new.css
@@ -7,7 +7,7 @@ body{
 header{
     background-color: red;
     padding:20px;
-    background-image: url(../../images/city-2.jpg);
+    background-image: url(city-2.jpg);
     height:400px;
     background-size: 100%;
     background-position:center;
@@ -129,7 +129,7 @@ p{
     
 }
 #filler{
-    background-image: url(../../images/city-3.jpeg);
+    background-image: url(city-3.jpeg);
     background-size: 100%;
     height:500px;
 }
